--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,9 @@ authors = ["spagnuolocarmine <spagnuolocarmine@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 SimpleHypergraphs = "aa4a32ff-dd5d-5357-90e3-e7a9512f0501"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
